...
    userDraggedMap,
    setUserDraggedMap,
    selectedPois,
    onPoiPress,
  } = props;

  const mapRef = useRef(null);

  useImperativeHandle(ref, () => mapRef.current);

  const snapBackToUser = () => {
    if (!mapRef.current || !userLocation) return;
    mapRef.current.animateToRegion(
...
        {liveLocationEnabled && userLocation && (
          <Marker
            coordinate={userLocation}
            title="You"
            pinColor="blue"
            accessible={true}
            accessibilityLabel="userMarker"
          />
        )}

        {selectedPois?.map((poi) => (
          <Marker
            key={poi.place_id}
...
