...
         style={styles.googleIcon}
         />
         <Text style={styles.googleText}> Sign in with Google</Text>
         </TouchableOpacity>

         <TouchableOpacity style={styles.skipButton} onPress = {onSkip}>
          <Text style={styles.skipText}>Skip</Text>
        </TouchableOpacity>

      </View>
    </ImageBackground>
  );
};
...
