...
{/*top left back button*/}
      <View style={styles.header}>
        <Pressable testID="pressBack" style={styles.backBtn} onPress={onPressBack}>
          <Ionicons name="arrow-back" size={26} color="white" />
        </Pressable>

        <Text style={styles.headerTitle}>Plan Your Trip</Text>
        <Text style={styles.headerSubtitle}>Find the best route between locations</Text>

{/*text box input start*/}
        <View style={[styles.input, { zIndex: activeField === "origin" ? 20 : 1 }]}>
          <Text style={styles.inputLabel}>From</Text>
          <View style={styles.inputRow}>
...
