...

      <Text style={styles.radiusLabel}>
        Search Radius: {radiusM} m
      </Text>

      <Slider
        testID="poiSlider"
        style={{ width: 300, height: 40 }}
        minimumValue={MIN_RADIUS}
        maximumValue={MAX_RADIUS}
        step={100}
        value={displayRadius}
        onValueChange={(value) => setDisplayRadius(value)}
...
