appId: host.exp.exponent
---

- waitForAnimationToEnd
- tapOn:
    id: gps

- assertVisible:
    id: mapRef
- assertNotVisible:
    id: userMarker
